# pyAIGameEngine

./: .gitattributes  .gitignore  APPLY_REV4.8_TEST_REPORT_PROCEDURE_UPDATE.md  Apply-PackageFromRevs.ps1  COMMANDS.md  Install-UpdatedSnapshotScripts.ps1  LOCAL_VALIDATION_COMMANDS.md  OPEN_THIS_FIRST.md  OPEN_THIS_REPO_FIRST.md  README.md  README.txt  README_APPLY_FIRST.md  README_project_relay.txt  README_sparse_snapshot.txt  project instructions.txt  pyAIGameEngine_ai_rl_boundary_docs_rev4_2_patch_contents.txt  pyproject.toml
POC1_SoaFirst/: README.md  pyproject.toml
POC1_SoaFirst/artifacts/test/: README.md
POC1_SoaFirst/artifacts/test/archive/: README.md  test_run_archive.jsonl
POC1_SoaFirst/artifacts/test/baselines/: benchmark_family_baselines.json  projection_baseline_v1.json
POC1_SoaFirst/config/interfaces/: agent_hot_control_manifest_v1.json
POC1_SoaFirst/docs/: 2026 03 25 REV1.0 POC1 install notes.md  2026 03 25 REV1.0 POC1 spec.md  architecture_spec.md
POC1_SoaFirst/docs/adr/: 0001-poc1-stack.md
POC1_SoaFirst/reports/current/: README.md  current_test_report.html  current_test_report.md
POC1_SoaFirst/scripts/: compare_backend_modes.py  regenerate_current_test_report.py  run_benchmark.py  run_determinism_check.py  run_gate_d_acceptance.py  run_gym_rollout.py  run_integrated_tests.py  run_numba_experiment.py  run_rigidbody_field_prototype.py  run_transfer_planner_demo.py  run_viewer.py  validate_configurable_interface.py
POC1_SoaFirst/src/poc1_engine/: __init__.py
POC1_SoaFirst/src/poc1_engine/ai/: __init__.py  action_bridge.py  feature_blocks.py  (+4 more)
(+515 files in other folders)
