[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaigameengine-poc1-planktic-soa-bulletgl"
version = "0.1.14"
description = "POC1 for pyAIGameEngine: SoA state + fallback-first simple integrator backend + optional PyBullet path + pyglet/ModernGL renderer + Gymnasium wrapper. Baseline: Python 3.12.x"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [{name="Scott Antonille"}]
dependencies = [
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
poc = [
  "pyglet>=2.1.0",
  "moderngl>=5.8.0",
  "gymnasium>=0.29",
  "pybullet>=3.2.0",
  "numba>=0.59",
]
dev = [
  "ruff>=0.6",
  "mypy>=1.8",
  "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
